--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 Fonts
 ===========
 */
+@import url(normalize.css);
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 
 /* 
